# django-ecommerce

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
communication/: admin.py  forms.py  models.py  urls.py  views.py
communication/migrations/: 0001_initial.py
communication/templates/communication/: detail.html  inbox.html  new.html
core/: forms.py  urls.py  views.py
core/api/v1/: serializers.py  urls.py  views.py
core/templates/core/: base.html  contact.html  index.html  login.html
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: index.html
ecommerce/: settings.py  urls.py
item/: admin.py  forms.py  models.py  urls.py  views.py
item/migrations/: 0001_initial.py  0002_alter_category_options_item.py  0003_item_description_alter_item_name.py
item/templates/item/: detail.html  form.html  items.html
